# cmake-demo

./: CMakeLists.txt  README.md
src/: main.cpp
src/brother/: CMakeLists.txt  brother.cpp  brother.h
src/sister/: CMakeLists.txt  sister.cpp  sister.h
